try to fix UI broke on mobile 5

--- a/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
+++ b/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
@@ -45,20 +45,19 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-    max-width: 100%;
   }
   .operator-content {
     order: 0;
     flex: 0 1 auto;
-    align-self: auto;
-    font-size: 55px;
-    width: 57px;
-    height: 57px;
-    border: 4px solid #6b6b6b;
+    align-self: auto; 
+    /* font-size: 55px; */
+    /* width: 57px !important; */
+    /* height: 57px !important; */
+    /* border: 4px solid #6b6b6b; */
     border-radius: 50%;
-    margin: 3px 3px 3px 3px;
-    text-align: center;
-    color: blue;
+    /* margin: 3px 3px 3px 3px; */
+    /* text-align: center; */
+    /* color: blue;
   }
   .operator-content-icon {
     width: 30px;
